// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Text renders RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      dir="rtl"
      placeholder=" "
      readOnly={true}
      type="text"
      value="Read only text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      dir="rtl"
      placeholder=" "
      readOnly={true}
      type="text"
      value="Read only text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        dir="rtl"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <label
        className="sc-eqKtKx uXXXN"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Text renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      disabled={true}
      placeholder=" "
      type="text"
      value="Text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      disabled={true}
      placeholder=" "
      type="text"
      value="Text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Text renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kBGJNX"
      placeholder="Placeholder"
      type="text"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX igbTSY"
      placeholder="Placeholder"
      type="text"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX fhOWWW"
        placeholder="Placeholder"
        type="text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Text renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder=" "
      readOnly={true}
      type="text"
      value="Read only text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder=" "
      readOnly={true}
      type="text"
      value="Read only text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Text renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="Placeholder"
      type="text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="Placeholder"
      type="text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Text renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="medium"
      type="text"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="large"
      type="text"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX iAgEXF"
        placeholder="xlarge"
        type="text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX jwaXyu"
      placeholder="Placeholder"
      type="text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX hpzrQJ"
      placeholder="Placeholder"
      type="text"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM eLTOhr"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="text"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
